Fix z-index perfil

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -648,6 +648,10 @@ progress::-webkit-progress-value {
   right: 0.75rem;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .order-1 {
   order: 1;
 }
